--- a/index.html
+++ b/index.html
@@ -26,55 +26,78 @@
 			</ul>
 		</div>
 		<div class="cover">
-			<h1>Eng. Wesley Melo</h1>
+
+			<div class="foto" style="padding-top: 20vh">
+				<img class="photo" src="img/photo.jpg">
+				<h1>Eng. Wesley Melo</h1>
+			</div>
+
 		</div>
+
 	</header>
 
 	<h2 class="container">Experiências Profissionais</h2>
 
-	<section class="container areas">
-		<div class="sub-area grid-5">
-			<i class="fa fa-microchip" style="font-size:48px;color:white"></i>
-			<h3>Automação</h3>
-			<ul>
-				<li>Lorem ipsum</li>
-				<li>Lorem ipsum</li>
-				<li>Lorem ipsum</li>
-				<li>Lorem ipsum</li>
-				<li>Lorem ipsum</li>
-			</ul>
-		</div>
+	<section class="container">
+		<div class="grid-16">
 
-		<div class="sub-area grid-5">
-			<i class="fa fa-code" style="font-size:48px;color:white"></i>
-			<h3>Computação</h3>
-			<ul>
-				<li>Lorem ipsum</li>
-				<li>Lorem ipsum</li>
-				<li>Lorem ipsum</li>
-				<li>Lorem ipsum</li>
-				<li>Lorem ipsum</li>
-			</ul>
-		</div>
+			<div class="grid-5" style="">
+			<div class="quadro-baixo" style="height: 90px;">
+					<p>Developer</p>
+					<i class="fa fa-code" style="font-size:40px;color:white"></i>
+				</div>
+					<div class="quadro-cima modifica-altura">
+						<ul>
+							<li style="color:black;">Lorem Impsum</li>
+							<li style="color:black;">Lorem Impsum</li>
+							<li style="color:black;">Lorem Impsum</li>
+							<li style="color:black;">Lorem Impsum</li>
+							<li style="color:black;">Lorem Impsum</li>
+						</ul>
+				</div>
+			</div>
 
-		<div class="sub-area grid-5">
-			<i class="fa fa-wifi" style="font-size:48px;color:white"></i>
-			<h3>Comunicações</h3>
-			<ul>
-				<li>Lorem ipsum</li>
-				<li>Lorem ipsum</li>
-				<li>Lorem ipsum</li>
-				<li>Lorem ipsum</li>
-				<li>Lorem ipsum</li>
-			</ul>
+			<div class="grid-5">
+			<div class="quadro-baixo" style="height: 90px;">
+					<p>Automação</p>
+					<i class="fa fa-microchip" style="font-size:40px;color:white"></i>
+				</div>
+					<div class="quadro-cima modifica-altura">
+						<ul>
+							<li style="color:black;">Lorem Impsum</li>
+							<li style="color:black;">Lorem Impsum</li>
+							<li style="color:black;">Lorem Impsum</li>
+							<li style="color:black;">Lorem Impsum</li>
+							<li style="color:black;">Lorem Impsum</li>
+						</ul>
+				</div>
+			</div>
+
+			<div class="grid-5">
+			<div class="quadro-baixo" style="height: 90px;">
+					<p>Automação</p>
+					<i class="fa fa-wifi" style="font-size:40px;color:white"></i>
+				</div>
+					<div class="quadro-cima modifica-altura">
+						<ul>
+							<li style="color:black;">Lorem Impsum</li>
+							<li style="color:black;">Lorem Impsum</li>
+							<li style="color:black;">Lorem Impsum</li>
+							<li style="color:black;">Lorem Impsum</li>
+							<li style="color:black;">Lorem Impsum</li>
+						</ul>
+				</div>
+			</div>
+
 		</div>
 	</section>
 
 	<h2 class="container">Formação Complementar</h2>
 
 	<section class="certificacao container">
+		<div class="certificados">
 		<ul class="grid-5">
-			<li>Cisco CCNA 200</li>
+			<li style="color:black;">Cisco CCNA 200</li>
 			<li>Mikrotik</li>
 			<li>Cisco CCNS 300</li>
 			<li>NIC.BR IPv6</li>
@@ -83,7 +106,7 @@
 			<li>Alura - Redes</li>
 			<li>Udemy - Pentest</li>
 		</ul>
-		<ul class="grid-6">
+		<ul class="grid-5">
 			<li>Origamid - Web Design</li>
 			<li>Wordpress como CMS</li>
 			<li>Cisco NDG - Linux</li>
@@ -103,6 +126,7 @@
 			<li>Udemy - Git/GitHub</li>
 			<li>Udemy - Java</li>
 		</ul>
+		</div>
 	</section>
 
 
@@ -130,10 +154,10 @@
 		<div class="endereco grid-7">
 			<h3>Endereço</h3>
 			<ul>
-				<li>Private Drive St, 171</li>
-				<li>Downtown</li>
-				<li>New Jersey/NJ</li>
-				<li>Zip Code: 90210</li>
+				<li>Rua Pintor Lemos, 463</li>
+				<li>Centro</li>
+				<li>Sobral/CE</li>
+				<li>CEP: 62010-720</li>
 			</ul>
 		</div> 
 
@@ -148,19 +172,19 @@
 		<div class="rodape">
 			<div class="grid-5">
 				<p>Contato</p>
-				<i class="fa fa-whatsapp" style="font-size:20px;color:blue"></i>
+				<i class="fa fa-whatsapp" style="font-size:20px;color:#33b5e5;"></i>
 				<span>(88)99950-9331</span>	<br>
-				<i class="fa fa-phone" style="font-size:20px;color:blue"></i>
+				<i class="fa fa-phone" style="font-size:20px;color:#33b5e5;"></i>
 				<span>(88)99289-7221</span>				
 			</div>
 		<div class="redes grid-4">
 			<p>Contatos na Web</p>
 				<ul>
-					<a href=""><li><i class="fa fa-facebook" style="font-size:26px;color:blue"></i></li></a>
-					<a href=""><li><i class="fa fa-twitter" style="font-size:26px;color:blue"></i></li></a>
-					<a href=""><li><i class="fa fa-github" style="font-size:26px;color:blue"></i></li></a>
-					<a href=""><li><i class="fa fa-envelope-o" style="font-size:26px;color:blue"></i></li></a>	
-					<a href=""><li><i class="fa fa-telegram" style="font-size:26px;color:blue"></i></li></a>					
+					<a href="https://facebook.com/fwesleyms" target="blank"><li><i class="fa fa-facebook" style="font-size:26px;color:#33b5e5;"></i></li></a>
+					<a href="https://twiter.com/wesleymelo" target="blank"><li><i class="fa fa-twitter" style="font-size:26px;color:#33b5e5;"></i></li></a>
+					<a href="https://github.io/fwesleyms" target="blank"><li><i class="fa fa-github" style="font-size:26px;color:#33b5e5;"></i></li></a>
+					<a href="mailto:fwesleym@gmail.com" target="blank"><li><i class="fa fa-envelope-o" style="font-size:26px;color:#33b5e5;"></i></li></a>	
+					<a href=""><li><i class="fa fa-telegram" style="font-size:26px;color:#33b5e5;"></i></li></a>					
 				</ul>
 			</div>
 		</div>
