--- a/paginas/experiencia.html
+++ b/paginas/experiencia.html
@@ -27,11 +27,16 @@
 		</div>
 
 		<div class="cover">
-			<h1>Eng. Wesley Melo</h1>
+
+			<div class="foto" style="padding-top: 20vh">
+				<img class="photo" src="../img/photo.jpg">
+				<h1>Eng. Wesley Melo</h1>
+			</div>
+
 		</div>
 	</header>
 
-	<h2 class="container">  <i class="fa fa-line-chart" style="font-size:48px;color:#292EDD"></i> Experiências</h2>
+	<h2 class="container">  <i class="fa fa-line-chart" style="font-size:48px;color:#33b5e5"></i> Experiências</h2>
 
 	<div class="container quadro">
 		
@@ -122,19 +127,19 @@
 		<div class="rodape">
 			<div class="grid-5">
 				 <p>Contato</p> 
-				<i class="fa fa-whatsapp" style="font-size:20px;color:blue"></i>
+				<i class="fa fa-whatsapp" style="font-size:20px;color:#33b5e5"></i>
 				<span>(88)99950-9331</span>	<br>
-				<i class="fa fa-phone" style="font-size:20px;color:blue"></i>
+				<i class="fa fa-phone" style="font-size:20px;color:#33b5e5"></i>
 				<span>(88)99289-7221</span>				
 			</div>
 		<div class="redes grid-4">
 			 Contatos na Web 
 				<ul>
-					<a href=""><li><i class="fa fa-facebook" style="font-size:26px;color:blue"></i></li></a>
-					<a href=""><li><i class="fa fa-twitter" style="font-size:26px;color:blue"></i></li></a>
-					<a href=""><li><i class="fa fa-github" style="font-size:26px;color:blue"></i></li></a>
-					<a href=""><li><i class="fa fa-envelope-o" style="font-size:26px;color:blue"></i></li></a>	
-					<a href=""><li><i class="fa fa-telegram" style="font-size:26px;color:blue"></i></li></a>					
+					<a href="https://facebook.com/fwesleyms" target="blank"><li><i class="fa fa-facebook" style="font-size:26px;color:#33b5e5"></i></li></a>
+					<a href="https://twiter.com/wesleymelo" target="blank"><li><i class="fa fa-twitter" style="font-size:26px;color:#33b5e5"></i></li></a>
+					<a href="https://github.io/fwesleyms" target="blank"><li><i class="fa fa-github" style="font-size:26px;color:#33b5e5"></i></li></a>
+					<a href="mailto:fwesleym@gmail.com" target="blank"><li><i class="fa fa-envelope-o" style="font-size:26px;color:#33b5e5"></i></li></a>	
+					<a href=""><li><i class="fa fa-telegram" style="font-size:26px;color:#33b5e5"></i></li></a>				
 				</ul>
 			</div>
 		</div>
