--- a/paginas/competencias.html
+++ b/paginas/competencias.html
@@ -27,7 +27,12 @@
 		</div>
 
 		<div class="cover">
-			<h1>Eng. Wesley Melo</h1>
+
+			<div class="foto" style="padding-top: 20vh">
+				<img class="photo" src="../img/photo.jpg">
+				<h1>Eng. Wesley Melo</h1>
+			</div>
+
 		</div>
 	</header>
 
