--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -27,11 +27,16 @@
 		</div>
 
 		<div class="cover">
-			<h1>Eng. Wesley Melo</h1>
+
+			<div class="foto" style="padding-top: 20vh">
+				<img class="photo" src="../img/photo.jpg">
+				<h1>Eng. Wesley Melo</h1>
+			</div>
+
 		</div>
 	</header>
 
-	<h2 class="container">  <i class="fa fa-at" style="font-size:48px;color:#292EDD;margin-left: 15px; margin-right: 10px;"></i> Contato</h2>
+	<h2 class="container">  <i class="fa fa-at" style="font-size:48px;color:#33b5e5;margin-left: 15px; margin-right: 10px;"></i> Contato</h2>
 
 	<div class="contato container">
 
@@ -59,10 +64,10 @@
 		<div class="endereco grid-7">
 			<h3>Endereço</h3>
 			<ul>
-				<li class="lugar">Private Drive St, 171</li>
-				<li class="lugar">Downtown</li>
-				<li class="lugar">New Jersey/NJ</li>
-				<li class="lugar">Zip Code: 90210</li>
+				<li class="lugar">Rua Pintor Lemos, 365</li>
+				<li class="lugar">Centro</li>
+				<li class="lugar">Sobral/CE</li>
+				<li class="lugar">62010-720</li>
 			</ul>
 		</div> 
 
@@ -78,19 +83,19 @@
 		<div class="rodape">
 			<div class="grid-5">
 				 <p>Contato</p> 
-				<i class="fa fa-whatsapp" style="font-size:20px;color:blue"></i>
+				<i class="fa fa-whatsapp" style="font-size:20px;color:#33b5e5"></i>
 				<span>(88)99950-9331</span>	<br>
-				<i class="fa fa-phone" style="font-size:20px;color:blue"></i>
+				<i class="fa fa-phone" style="font-size:20px;color:#33b5e5"></i>
 				<span>(88)99289-7221</span>				
 			</div>
 		<div class="redes grid-4">
 			 Contatos na Web 
 				<ul>
-					<a href=""><li><i class="fa fa-facebook" style="font-size:26px;color:blue"></i></li></a>
-					<a href=""><li><i class="fa fa-twitter" style="font-size:26px;color:blue"></i></li></a>
-					<a href=""><li><i class="fa fa-github" style="font-size:26px;color:blue"></i></li></a>
-					<a href=""><li><i class="fa fa-envelope-o" style="font-size:26px;color:blue"></i></li></a>	
-					<a href=""><li><i class="fa fa-telegram" style="font-size:26px;color:blue"></i></li></a>					
+					<a href="https://facebook.com/fwesleyms"><li><i class="fa fa-facebook" style="font-size:26px;color:#33b5e5"></i></li></a>
+					<a href="https://twitter.com/wesleymelo"><li><i class="fa fa-twitter" style="font-size:26px;color:#33b5e5"></i></li></a>
+					<a href="https://github.io/fwesleyms"><li><i class="fa fa-github" style="font-size:26px;color:#33b5e5"></i></li></a>
+					<a href="mailto:fwesleym@gmail.com"><li><i class="fa fa-envelope-o" style="font-size:26px;color:#33b5e5"></i></li></a>	
+					<a href=""><li><i class="fa fa-telegram" style="font-size:26px;color:#33b5e5"></i></li></a>					
 				</ul>
 			</div>
 		</div>
