--- a/paginas/formacao.html
+++ b/paginas/formacao.html
@@ -27,11 +27,13 @@
 		</div>
 
 		<div class="cover">
-			<h1>Eng. Wesley Melo</h1>
-		</div>
+			<div class="foto" style="padding-top: 20vh">
+				<img class="photo" src="../img/photo.jpg">
+				<h1>Eng. Wesley Melo</h1>
+			</div>
 	</header>
 
-	<h2 class="container">  <i class="fa fa-graduation-cap" style="font-size:48px;color:#292EDD"></i> Formação Acadêmica</h2>
+	<h2 class="container">  <i class="fa fa-graduation-cap" style="font-size:48px;color:#33b5e5"></i> Formação Acadêmica</h2>
 
 	<div class="container">
 		<h3 class="container lista-formacao">Ensino Superior</h3>
@@ -70,19 +72,19 @@
 		<div class="rodape">
 			<div class="grid-5">
 				<p>Contato</p>
-				<i class="fa fa-whatsapp" style="font-size:20px;color:blue"></i>
+				<i class="fa fa-whatsapp" style="font-size:20px;color:#33b5e5"></i>
 				<span>(88)99950-9331</span>	<br>
-				<i class="fa fa-phone" style="font-size:20px;color:blue"></i>
+				<i class="fa fa-phone" style="font-size:20px;color:#33b5e5"></i>
 				<span>(88)99289-7221</span>				
 			</div>
 		<div class="redes grid-4">
 			<p>Contatos na Web</p>
 				<ul>
-					<a href=""><li><i class="fa fa-facebook" style="font-size:26px;color:blue"></i></li></a>
-					<a href=""><li><i class="fa fa-twitter" style="font-size:26px;color:blue"></i></li></a>
-					<a href=""><li><i class="fa fa-github" style="font-size:26px;color:blue"></i></li></a>
-					<a href=""><li><i class="fa fa-envelope-o" style="font-size:26px;color:blue"></i></li></a>	
-					<a href=""><li><i class="fa fa-telegram" style="font-size:26px;color:blue"></i></li></a>					
+					<a href="https://facebook.com/fwesleyms" target="blank"><li><i class="fa fa-facebook" style="font-size:26px;color:#33b5e5"></i></li></a>
+					<a href="https://twiter.com/wesleymelo" target="blank"><li><i class="fa fa-twitter" style="font-size:26px;color:#33b5e5"></i></li></a>
+					<a href="https://github.io/fwesleyms" target="blank"><li><i class="fa fa-github" style="font-size:26px;color:#33b5e5"></i></li></a>
+					<a href="mailto:fwesleym@gmail.com" target="blank"><li><i class="fa fa-envelope-o" style="font-size:26px;color:#33b5e5"></i></li></a>	
+					<a href=""><li><i class="fa fa-telegram" style="font-size:26px;color:#33b5e5"></i></li></a>					
 				</ul>
 			</div>
 		</div>
