Versão final de verdade

--- a/paginas/formacao.html
+++ b/paginas/formacao.html
@@ -82,7 +82,7 @@
 				<ul>
 					<a href="https://facebook.com/fwesleyms" target="blank"><li><i class="fa fa-facebook" style="font-size:26px;color:#33b5e5"></i></li></a>
 					<a href="https://twiter.com/wesleymelo" target="blank"><li><i class="fa fa-twitter" style="font-size:26px;color:#33b5e5"></i></li></a>
-					<a href="https://github.io/fwesleyms" target="blank"><li><i class="fa fa-github" style="font-size:26px;color:#33b5e5"></i></li></a>
+					<a href="https://github.com/fwesleyms" target="blank"><li><i class="fa fa-github" style="font-size:26px;color:#33b5e5"></i></li></a>
 					<a href="mailto:fwesleym@gmail.com" target="blank"><li><i class="fa fa-envelope-o" style="font-size:26px;color:#33b5e5"></i></li></a>	
 					<a href=""><li><i class="fa fa-telegram" style="font-size:26px;color:#33b5e5"></i></li></a>					
 				</ul>
