--- a/paginas/competencias.html
+++ b/paginas/competencias.html
@@ -36,7 +36,7 @@
 		</div>
 	</header>
 
-	<h2 class="container">  <i class="fa fa-circle-o-notch" style="font-size:48px;color:#292EDD"></i> Competências</h2>
+	<h2 class="container">  <i class="fa fa-circle-o-notch" style="font-size:48px;color:#33b5e5"></i> Competências</h2>
 
 
 	<div class="container">
@@ -58,19 +58,19 @@
 		<div class="rodape">
 			<div class="grid-5">
 				 <p>Contato</p> 
-				<i class="fa fa-whatsapp" style="font-size:20px;color:blue"></i>
+				<i class="fa fa-whatsapp" style="font-size:20px;color:#33b5e5"></i>
 				<span>(88)99950-9331</span>	<br>
-				<i class="fa fa-phone" style="font-size:20px;color:blue"></i>
+				<i class="fa fa-phone" style="font-size:20px;color:#33b5e5"></i>
 				<span>(88)99289-7221</span>				
 			</div>
 		<div class="redes grid-4">
 			 Contatos na Web 
 				<ul>
-					<a href=""><li><i class="fa fa-facebook" style="font-size:26px;color:blue"></i></li></a>
-					<a href=""><li><i class="fa fa-twitter" style="font-size:26px;color:blue"></i></li></a>
-					<a href=""><li><i class="fa fa-github" style="font-size:26px;color:blue"></i></li></a>
-					<a href=""><li><i class="fa fa-envelope-o" style="font-size:26px;color:blue"></i></li></a>	
-					<a href=""><li><i class="fa fa-telegram" style="font-size:26px;color:blue"></i></li></a>					
+					<a href="https://facebook.com/fwesleyms"><li><i class="fa fa-facebook" style="font-size:26px;color:#33b5e5"></i></li></a>
+					<a href="https://twitter.com/wesleymelo"><li><i class="fa fa-twitter" style="font-size:26px;color:#33b5e5"></i></li></a>
+					<a href="https://github.com/fwesleyms"><li><i class="fa fa-github" style="font-size:26px;color:#33b5e5"></i></li></a>
+					<a href="mailto:fwesleym@gmail.com"><li><i class="fa fa-envelope-o" style="font-size:26px;color:#33b5e5"></i></li></a>	
+					<a href=""><li><i class="fa fa-telegram" style="font-size:26px;color:#33b5e5"></i></li></a>					
 				</ul>
 			</div>
 		</div>
