--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -93,7 +93,7 @@
 				<ul>
 					<a href="https://facebook.com/fwesleyms"><li><i class="fa fa-facebook" style="font-size:26px;color:#33b5e5"></i></li></a>
 					<a href="https://twitter.com/wesleymelo"><li><i class="fa fa-twitter" style="font-size:26px;color:#33b5e5"></i></li></a>
-					<a href="https://github.io/fwesleyms"><li><i class="fa fa-github" style="font-size:26px;color:#33b5e5"></i></li></a>
+					<a href="https://github.com/fwesleyms"><li><i class="fa fa-github" style="font-size:26px;color:#33b5e5"></i></li></a>
 					<a href="mailto:fwesleym@gmail.com"><li><i class="fa fa-envelope-o" style="font-size:26px;color:#33b5e5"></i></li></a>	
 					<a href=""><li><i class="fa fa-telegram" style="font-size:26px;color:#33b5e5"></i></li></a>					
 				</ul>
